Scrollbar gap solved

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -11,6 +11,7 @@ $colorTertiary: #f7f7f7;
 body,
 html {
     height: 100%;
+    overflow-y: overlay;
 }
 
 * {
